# latestcsmon

./: Dockerfile  main.py  pyproject.toml  requirements.txt  webapp.py
attached_assets/: Pasted--workspace-python-setup-py-home-runner-workspace-pythonlibs-lib-python3-12-site-packages-setupt-1745847972671.txt  Pasted--workspace-python-setup-py-home-runner-workspace-pythonlibs-lib-python3-12-site-packages-setupt-1745848075409.txt  Pasted-ALSA-lib-confmisc-c-855-parse-card-cannot-find-card-0-ALSA-lib-conf-c-5204-snd-config-evaluat-1745848052688.txt
sesame_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: index.html
