
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sesame_ai"
version = "0.1.0"
description = "Unofficial Python client for Sesame AI voice conversations"
authors = [
    {name = "ijub", email = "hello@example.com"}
]
dependencies = [
    "requests>=2.25.1",
    "websocket-client>=1.0.0",
    "PyAudio>=0.2.11",
    "numpy>=1.19.0"
]
readme = "README.md"
keywords = ["sesame", "ai", "voice", "api", "wrapper", "chatbot"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
dev = ["pytest>=6.0.0", "black>=21.5b2", "flake8>=3.9.0"]
